# workbooks

./: .clippy.toml  .gitignore  CENTRALIZED_SECRETS.md  CLAUDE.md  Cargo.toml  DEBUG_SECRETS.md  HARDENING_GOALS.md  IDEA_GOALS.md  LINTING.md  LINT_REPORT.md  PLAN-wave3.md  PLAN-wave4.md  PLAN-wave5-bets.md  PLAN-wave5.md  README.md  SECRETS_FIX.md  STYLE_GUIDE.md  TEST_SECRETS.md  TODO.md  app-dependencies.md  app-features.md  encryption.md  eslint.config.js  features-request.md  index.html  install.sh  issues.md  notebook-features-checklist.md  package-lock.json  package.json  project-defaults.md  pyproject.toml  ruff.toml  tailwind.config.js  wbbr-todo.md
.claude/commands/: release.md
.claude/skills/push/: SKILL.md
.claude/skills/release-cli/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
broken/: 1-download-gists.md  2-google-bookmarks.md
docs/: TETHER_PROJECT_FOLDER.md  WORKBOOKS_PROJECT_FOLDER.md  enhancement-ideas.md
docs/benefits/: README.md  other.md  primary.md  secondary.md  todo.md  wishlist.md
examples/: .env  artifact-labels-demo.md  artifacts-demo.md  browser-demo.md  browser-pause-demo.md  conditional-demo.md  conditional-pause-demo.md  data-pipeline.md  deploy-check-o.md  deploy-check.md  health-check.md  hello.md  http-demo.md  include-demo.md  include-login.md  multi-runtime.md  params-demo.md  pause-for-human-demo.md  required-demo.md  sandbox-demo.md  sandbox-node.md  sandbox-python.md  sandbox-sysadmin.md  secrets-demo.md  secrets-nodejs-demo.md  secrets-python-demo.md  setup-demo.md  shared-state.md  step-ids-demo.md  test-demo.md  wait-demo.md  wait-for-drop-demo.md
features/: README.md  changelog.md  todo.md
features/action-window/: docs.md  done.md  todo.md
features/ai-assistant/: docs.md  done.md  todo.md
features/ai-change-history/: docs.md  done.md  todo.md
features/cli/: docs.md  done.md  todo.md
features/files/: docs.md  done.md  todo.md
features/marketplace/: docs.md  done.md  questions.md  todo.md
features/mcp/: docs.md  done.md  todo.md
features/navigation/: docs.md  done.md  todo.md
features/network/: docs.md  done.md  todo.md
features/notifications/: docs.md  done.md  todo.md
features/project-settings/: docs.md  done.md  todo.md
features/schedule/: docs.md  done.md  implementation-notes.md  todo.md
features/secrets/: docs.md  done.md  todo.md
features/sidebar/: docs.md  done.md  todo.md
features/state/: docs.md  done.md  todo.md
features/tray/: docs.md  done.md  todo.md
features/triggers/: todo.md
features/upgrading/: docs.md  done.md  questions.md  todo.md
features/workbooks/: docs.md  done.md  todo.md
gists/: google_bookmarks_to_csv.py
runtimes/browser/: README.md  package-lock.json  package.json
runtimes/browser/lib/: http.js  io.js  recording-manager.js  session-manager.js  stub-page.js  util.js
runtimes/browser/test/: io.test.js  session-manager.test.js  verbs.test.js
runtimes/browser/verbs/: announce_artifact.js  assert.js  click.js  eval.js  extract.js  (+9 more)
sample-notebooks/: iteration.ipynb
scripts/: check-browser-runtime.sh  check.sh  update-version.js
skills/workbooks/: SKILL.md
src/: App.css  App.jsx  artifacts.rs  assertion.rs  atomic_io.rs  cache.rs  callback.rs  checkpoint.rs  config.rs  diagnostic.rs  doctor.rs  error.rs  executor.rs  exit.rs  exit_codes.rs  lib.rs  lockfile.rs  logging.rs  main.rs  mcp.rs  output.rs  params.rs  parser.rs  pending.rs  sandbox.rs  secrets.rs  sidecar.rs  signal.rs  signing.rs  step_ir.rs  step_outputs.rs  trust.rs  update.rs  validate.rs  workflow.rs
src-engine/: pyproject.toml
src-engine/tether_engine/: __init__.py  __main__.py  config.py  server.py
src-engine/workbooks_engine/: __init__.py  __main__.py  config.py  server.py
src-tauri/: Cargo.toml  engine_pyproject.toml  engine_server.py  kernel_manager.py  kernel_server.py  tauri.conf.json  test_kernel.py
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs.deprecated  app_credentials.rs  chat_sessions.rs  claude_cli.rs  cli.rs  cli_install.rs  config.rs  engine_http.rs  fs.rs  global_config.rs  kernel.rs  kernel_http.rs  lib.rs  local_auth_macos.rs  main.rs  project.rs  python.rs  recent_projects.rs  scheduler.rs  secrets.rs  watcher.rs
src/components/: ActionWindow.jsx  AiChatPanel.jsx  AiChatPanel.jsx.backup  AiSidebar.jsx  AiSidebar.jsx.old  AppSettings.jsx  Canvas.jsx  ClaudeApprovalModal.jsx  ContextMenu.jsx  CreateProject.jsx  FileExplorer.jsx  FileInfoDialog.jsx  FileViewer.jsx  InputDialog.jsx  NewWorkbookModal.jsx  NotebookDiffModal.jsx  NotebookList.jsx  NotebookViewer.jsx  NotebookViewer.jsx.backup  ResizablePanel.jsx  RunLog.jsx  SaveConfirmDialog.jsx  ScheduleTab.jsx  SecretsManager.jsx  SecretsWarningModal.jsx  Sidebar.jsx  StatePanel.jsx  TabBar.jsx  Welcome.jsx  WorkbookList.jsx  WorkbookViewer.jsx  WorkbooksTableView.jsx
src/hooks/: useProject.js  useTether.js  useWorkbooks.js
tests/: cli_smoke.rs  conditional_output_gate.rs  cov_browser.rs  cov_docker.rs  cov_lib_extra.rs  cov_lib_handlers.rs  cov_lifecycle.rs  cov_mcp_e2e.rs  cov_params_trust.rs  cov_redis.rs  cov_run_errors.rs  cov_run_flags.rs  cov_selection_cache.rs  cov_subcommands.rs  doctor_cli.rs  embed.rs  mcp_e2e.rs  orchestration_contract.rs  step_ids_cli.rs  test_include_step_events.sh  test_wait_demo.sh  validate_cli.rs
verify-action/: README.md  action.yml
wb-core/: Cargo.toml  build-wasm.sh
wb-core/src/: lib.rs
(+3 files in other folders)
