[package]
name = "wb"
version = "0.1.0"
edition = "2021"
description = "Run markdown workbooks from the command line"
license = "MIT"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary, no unwinding
