[package]
name = "wb"
version = "0.7.4"
edition = "2021"
description = "Run markdown workbooks from the command line"
license = "MIT"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
redis = { version = "1.2.0", features = ["tls-rustls"] }
rustls = { version = "0.23.38", features = ["ring"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary, no unwinding
