[package]
name = "wb"
version = "0.16.0"
edition = "2021"
description = "Run markdown workbooks from the command line"
license = "MIT"

[lib]
name = "wb"
path = "src/lib.rs"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
redis = { version = "1.2.0", features = ["tls-rustls"] }
rustls = { version = "0.23.38", features = ["ring"] }
fs4 = "0.13"
thiserror = "2"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
ed25519-dalek = "2"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller binary, no unwinding

[workspace]
members = ["wb-core"]
