[project]
name = "workbooks"
version = "0.0.1"
description = "Durable notebook orchestration for local-first data pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "jupyter-client>=8.6.0",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
]
