[package]
name = "tether"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tether"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tether_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tether-cli"
path = "src/cli.rs"

[[bin]]
name = "tether"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "4"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
futures-util = "0.3"
dirs = "5"
zmq = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
keyring = "3.0"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
block = "0.1"

