[package]
name = "wb-core"
version = "0.16.0"
edition = "2021"
description = "Embeddable parser / step-IR / diagnostic core for wb (WASM-buildable)"
license = "MIT"

[lib]
# `cdylib` for a WASM artifact, `rlib` for native embedding.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
